syntax = "proto3";

package whatsapp.media;

option csharp_namespace = "Web.Grpc.Proto.Media";


service Media {
  rpc UploadProfileImage (UploadProfileImageRequest) returns (UploadProfileImageRequestReply);
}

message UploadProfileImageRequest {
  string user_id = 1;
  bytes image = 2;
  string extension = 3;
}

message UploadProfileImageRequestReply {
  string profile_image_url = 1;
}
